--- a/database/Parabase/help.html
+++ b/database/Parabase/help.html
@@ -27,7 +27,7 @@
             <span class="rf">            
             <ul id="blnav">
                 <li  class="first active"><a href="http://web.it.nctu.edu.tw/~nctu_formosa/Parabase/" title="Parabase Home">Home</a></li>
-                <li  class="recent "><a href="">Statistics</a></li>             
+                <li  class="recent "><a href="statistics.html">Statistics</a></li>             
                 <li  class="saved "><a href="https://www.facebook.com/NCTUFormosa/">Contact Us</a></li>
                 <li  class="last documentation "><a href="help.html">Help</a></li>                
             </ul>
@@ -35,3 +35,34 @@
         </nav>
         </div>                
         </header>
+        <div id="content-wrap">
+        <div id="content">
+            <div id="top">
+            <div id="homeDescr" class="clearfix" style="max-height: 400px;">
+            <h2 class="lf">iGEM Project: Parabase: </h2>  
+            <div  id="blast_desc" style="width:100%">
+            <span>
+            &nbsp;&nbsp;NCTU_Formosa iGEM team wiki <b>[<a href="http://2017.igem.org/Team:NCTU_Formosa" target="_blank">LinkOut</a>]</b><br><br><br>
+            </span>
+            </div>
+             
+            <h2 class="lf">Other Antifungal Peptide Resources: </h2>  
+            <div  id="blast_desc" style="width:100%">
+            <span>
+            &nbsp;&nbsp;(1)CAMP<sub>R3</sub> (Collection of Anti-Microbial Peptides) <b>[<a href="http://www.camp.bicnirrh.res.in/" target="_blank">LinkOut</a>]</b><br>
+            &nbsp;&nbsp;(2)PhytAMP (a database dedicated to plant antimicrobial peptides) <b>[<a href="http://phytamp.hammamilab.org/main.php" target="_blank">LinkOut</a>]</b><br>
+            &nbsp;&nbsp;(3)The Antimicrobial Peptide Database (APD) <b>[<a href="http://aps.unmc.edu/AP/main.php" target="_blank">LinkOut</a>]</b><br><br><br>
+            </span>
+            </div>
+
+            <h2 class="lf">Other Fungal Host Resources: </h2>
+            <div  id="blast_desc" style="width:100%">
+            <span>
+            &nbsp;&nbsp;(1)PHI-<i>base</i> (Pathogen Host Interactions) <b>[<a href="http://www.phi-base.org/index.jsp" target="_blank">LinkOut</a>]</b><br>
+            &nbsp;&nbsp;(2)PhytoPath <b>[<a href="http://www.phytopathdb.org/" target="_blank">LinkOut</a>]</b><br>
+            </span>
+            </div>
+
+
+</body>
+</html>
