--- a/database/Parabase/search.html
+++ b/database/Parabase/search.html
@@ -16,11 +16,11 @@
     <header id="page_header" role="banner">
         <div class="bg-gray header-div">
         <nav class="top-nav" id="navcontent" role="navigation">
-            <a class="lf" href="http://2017.igem.org/Team:NCTU_Formosa"><img id="logo" alt="NCTU_Formosa" src="images/logo.png"></a>
+            <a class="lf" href="http://web.it.nctu.edu.tw/~nctu_formosa/Parabase/"><img id="logo" alt="NCTU_Formosa" src="images/logo.png"></a>
             <span class="rf">            
             <ul id="blnav">
                 <li  class="first active"><a href="http://web.it.nctu.edu.tw/~nctu_formosa/Parabase/" title="Parabase Home">Home</a></li>
-                <li  class="recent "><a href="">Statistics</a></li>                
+                <li  class="recent "><a href="statistics.html">Statistics</a></li>                
                 <li  class="saved "><a href="https://www.facebook.com/NCTUFormosa/">Contact Us</a></li>
                 <li  class="last documentation "><a href="help.html">Help</a></li>                
             </ul>
@@ -34,7 +34,7 @@
             <div id="homeDescr" class="clearfix">
             <h1 class="lf">Search Parabase</h1>	
             <div  id="blast_desc"><span><span>Parabase</span>
-            can be search by Host species, Pathogen species, antifungal peptides' id in parabase and antifungal peptides' amino acid sequences
+            can be search by (1)Host species, (2)Pathogen species, (3)Parabase id and (4)the amino acid sequences of antifungalpeptides. Host species can be searched by either their common name or scientific name, while fungal pathogens can only be searched by their scientific name.
             </span>
             <form enctype="multipart/form-data" action="search.php" method="get">
     <p>
