--- a/database/Parabase/predict.html
+++ b/database/Parabase/predict.html
@@ -16,11 +16,11 @@
     <header id="page_header" role="banner">
         <div class="bg-gray header-div">
         <nav class="top-nav" id="navcontent" role="navigation">
-            <a class="lf" href="http://2017.igem.org/Team:NCTU_Formosa"><img id="logo" alt="NCTU_Formosa" src="images/logo.png"></a>
+            <a class="lf" href="http://web.it.nctu.edu.tw/~nctu_formosa/Parabase/"><img id="logo" alt="NCTU_Formosa" src="images/logo.png"></a>
             <span class="rf">            
             <ul id="blnav">
                 <li  class="first active"><a href="http://web.it.nctu.edu.tw/~nctu_formosa/Parabase/" title="Parabase Home">Home</a></li>
-                <li  class="recent "><a href="">Statistics</a></li>                
+                <li  class="recent "><a href="statistics.html">Statistics</a></li>                
                 <li  class="saved "><a href="https://www.facebook.com/NCTUFormosa/">Contact Us</a></li>
                 <li  class="last documentation "><a href="help.html">Help</a></li>                
             </ul>
@@ -34,7 +34,8 @@
             <div id="homeDescr" class="clearfix">
             <h1 class="lf">Predict Parabase</h1>
             <div  id="blast_desc"><span><span>Parabase</span>
-            can predict whether a peptide has antifungal activity by its amino acid sequences. Inputs must be in fasta format
+            can predict whether a peptide has antifungal activity by its amino acid sequences. The result of prediction is showed as a propensity score to be antifungal, the threshold score 
+            is <span>353</span>, peptides that scores higher than the threshold will be predicted as antifungal. Our software can also visualize the local high propensity portion. Inputs must be in <span>fasta format</span>. Multiple peptides query is available.
             </span>
             <form enctype="multipart/form-data" action="predict.php" method="post">
     <p>
